--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>univers multi-services</title>
+    <link rel="stylesheet" href="view/css/style.css">
 </head>
 <body>
-    
+    <div id="header">
+        <div class="ums">
+            UM-services
+        </div>
+    </div>
+    <div id="branche">
+        <div class="items">ucon</div>
+        <div class="items">u-tech</div>
+        <div class="items">u-elec</div>
+    </div>
+
 </body>
 </html>
