--- a/index.html
+++ b/index.html
@@ -5,18 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>univers multi-services</title>
     <link rel="stylesheet" href="view/css/style.css">
+    <link rel="stylesheet" href="view/css/nav.css">
+    <script src="view/js/app.js"></script>
 </head>
 <body>
-    <div id="header">
-        <div class="ums">
-            UM-services
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">
+                <a href="#"><img src="view/img/logo.png" width="60px" alt="univers multi-services logo"></a>
+            </div>
+            <div class="main_list" id="mainListDiv">
+                <ul>
+                    <li><a href="#Acceuil">Acceuil</a></li>
+                    <li><a href="#">A propos</a></li>
+                    <li><a href="#">U-tech</a></li>
+                    <li><a href="#">U-elec</a></li>
+                    <li><a href="#">U-cons</a></li>
+                </ul>
+            </div>
+            <div class="media_button">
+                <button class="main_media_button" id="mediaButton">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
         </div>
-    </div>
+    </nav>
+        
+    <section class="home">
+
+    </section>
     <div id="branche">
         <div class="items">ucon</div>
         <div class="items">u-tech</div>
         <div class="items">u-elec</div>
     </div>
+    <section id="service">
+        <div id="containeur1">
+
+        </div>
+        <div id="containeur2">
+
+        </div>
+        <div id="containeur3">
+
+        </div>
+    </section>
+    <footer id="pied">
+
+    </footer>
 
 </body>
 </html>
