--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
                 <ul>
                     <li><a href="#Acceuil">Acceuil</a></li>
                     <li><a href="#">A propos</a></li>
-                    <li><a href="#">U-tech</a></li>
-                    <li><a href="#">U-elec</a></li>
-                    <li><a href="#">U-cons</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
             <div class="media_button">
@@ -32,15 +31,16 @@
             </div>
         </div>
     </nav>
-        
+
+    <div id="branche">
+        <div class="items"></div>
+        <div class="items"></div>
+        <div class="items"></div>
+    </div>
+            
     <section class="home">
 
     </section>
-    <div id="branche">
-        <div class="items">ucon</div>
-        <div class="items">u-tech</div>
-        <div class="items">u-elec</div>
-    </div>
     <section id="service">
         <div id="containeur1">
 
