--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="view/css/style.css">
     <link rel="stylesheet" href="view/css/nav.css">
     <script src="view/js/app.js"></script>
+    <link rel="shortcut icon" href="view/img/logo.png" type="image/x-icon">
 </head>
 <body>
     <nav class="nav">
@@ -16,10 +17,10 @@
             </div>
             <div class="main_list" id="mainListDiv">
                 <ul>
-                    <li><a href="#Acceuil">Acceuil</a></li>
-                    <li><a href="#">A propos</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#branche">Acceuil</a></li>
+                    <li><a href="#home">A propos</a></li>
+                    <li><a href="#containeur1">Service</a></li>
+                    <li><a href="#pied">Contact</a></li>
                 </ul>
             </div>
             <div class="media_button">
@@ -38,8 +39,8 @@
         <div class="items"></div>
     </div>
             
-    <section class="home">
-
+    <section id="home">
+        <p>bienvenu sur la page officielle de univers multi-services</p>
     </section>
     <section id="service">
         <div id="containeur1">
@@ -53,7 +54,7 @@
         </div>
     </section>
     <footer id="pied">
-
+ODI
     </footer>
 
 </body>
