--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     </div>
             
     <section id="home">
-        <p>bienvenu sur la page officielle de univers multi-services</p>
+        <div class="home1">
+            <h3>bienvenu chez univers multi-services</h3><br>
+            nous sommes une entreprise faite<br>pour vous services
+        </div>
+        <div class="home1">
+            <img src="view/img/logo.png" class="photo1" alt="umservices">
+        </div>
     </section>
     <section id="service">
         <div id="containeur1">
