--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </nav>
 
     <div id="branche">
-        <div class="items"></div>
-        <div class="items"></div>
-        <div class="items"></div>
+       <a href=""><img src="view/img/sos.jpeg" class="items" alt=""></a> 
+        <a href=""><img src="view/img/touch.jpeg" class="items" alt=""></a>
+        <a href=""><img src="view/img/cam3.jpeg" class="items" alt=""></a>
     </div>
             
     <section id="home">
@@ -50,13 +50,28 @@
     </section>
     <section id="service">
         <div id="containeur1">
-
+            <div class="u-cons">
+                <img src="view/img/logo.png" class="photo2" alt="umservices">
+            </div>
+            <div class="u-cons">
+                zoehipppppppppppppppppppppc
+            </div>
         </div>
         <div id="containeur2">
-
+            <div class="u-tech">
+                !dipppppppppppzaipappapaa
+            </div>
+            <div class="u-tech">
+                <img src="view/img/logo.png" class="photo3" alt="umservices">
+            </div>
         </div>
         <div id="containeur3">
-
+            <div class="u-elec">
+                <img src="view/img/logo.png" class="photo4" alt="umservices">
+            </div>
+            <div class="u-elec">
+                zoehipppppppppppppppppppppc
+            </div>
         </div>
     </section>
     <footer id="pied">
