--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             
     <section id="home">
         <div class="home1">
-            <h3>bienvenu chez univers multi-services</h3><br>
-            nous sommes une entreprise faite<br>pour vous services
+            Univers Multi-Services est une entreprise dynamique et innovante qui offre une gamme complète de services pour répondre aux besoins de ses clients. <br>
         </div>
         <div class="home1">
             <img src="view/img/logo.png" class="photo1" alt="umservices">
