--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>univers multi-services</title>
     <link rel="stylesheet" href="view/css/style.css">
     <link rel="stylesheet" href="view/css/nav.css">
-    <script src="view/js/app.js"></script>
     <link rel="shortcut icon" href="view/img/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -53,12 +52,12 @@
                 <img src="view/img/logo.png" class="photo2" alt="umservices">
             </div>
             <div class="u-cons">
-                zoehipppppppppppppppppppppc
+                U-Cons est un departement de construction innovante et fiable, spécialisée dans la réalisation de projets de construction de grande envergure. <br>U-Cons est en mesure de livrer des projets dans les délais impartis et dans les limites du budget, tout en garantissant la satisfaction totale du client
             </div>
         </div>
         <div id="containeur2">
             <div class="u-tech">
-                !dipppppppppppzaipappapaa
+                U-Tech est en mesure de fournir des solutions personnalisées qui répondent aux besoins spécifiques de chaque entreprise, tout en garantissant un niveau élevé de satisfaction du client.
             </div>
             <div class="u-tech">
                 <img src="view/img/logo.png" class="photo3" alt="umservices">
@@ -69,13 +68,18 @@
                 <img src="view/img/logo.png" class="photo4" alt="umservices">
             </div>
             <div class="u-elec">
-                zoehipppppppppppppppppppppc
+                Nous proposons des services de qualité pour répondre à tous vos besoins en matière d’électricité, y compris l’installation, la réparation et l’entretien de systèmes électriques.
             </div>
         </div>
     </section>
     <footer id="pied">
-ODI
-    </footer>
+        <div class="foot">
+            Chez Univers Multi-Services, nous nous efforçons de dépasser les attentes de nos clients en leur offrant des solutions personnalisées et adaptées à leurs besoins spécifiques. <br>Nous sommes spécialisés dans les domaines de la maintenance, du nettoyage, de la sécurité, de l’informatique et bien plus encore
+        </div>
+        <div class="foot">
 
+        </div>
+    </footer>
+    <script type="module" src="view/js/script.js"></script>
 </body>
 </html>
