--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
         <div class="home1">
             Univers Multi-Services est une entreprise dynamique et innovante qui offre une gamme complète de services pour répondre aux besoins de ses clients. <br>
         </div>
-        <div class="home1">
-            <img src="view/img/logo.png" class="photo1" alt="umservices">
-        </div>
+        <img src="view/img/service.avif" class="home1" alt="umservices">
     </section>
     <section id="service">
         <div id="containeur1">
-            <div class="u-cons">
-                <img src="view/img/logo.png" class="photo2" alt="umservices">
-            </div>
+            <img src="view/img/travailler.avif" class="u-cons" alt="u-cons">
             <div class="u-cons">
                 U-Cons est un departement de construction innovante et fiable, spécialisée dans la réalisation de projets de construction de grande envergure. <br>U-Cons est en mesure de livrer des projets dans les délais impartis et dans les limites du budget, tout en garantissant la satisfaction totale du client
             </div>
@@ -59,16 +55,12 @@
             <div class="u-tech">
                 U-Tech est en mesure de fournir des solutions personnalisées qui répondent aux besoins spécifiques de chaque entreprise, tout en garantissant un niveau élevé de satisfaction du client.
             </div>
-            <div class="u-tech">
-                <img src="view/img/logo.png" class="photo3" alt="umservices">
-            </div>
+            <img src="view/img/codeur.avif" class="u-tech" alt="umservices">
         </div>
         <div id="containeur3">
+            <img src="view/img/technicien.avif" class="u-elec" alt="umservices">
             <div class="u-elec">
-                <img src="view/img/logo.png" class="photo4" alt="umservices">
-            </div>
-            <div class="u-elec">
-                Nous proposons des services de qualité pour répondre à tous vos besoins en matière d’électricité, y compris l’installation, la réparation et l’entretien de systèmes électriques.
+                U-Elec est un departement expert dans le domaine des installations électriques pour les particuliers et les entreprises.<br>Nous proposons des services de qualité pour répondre à tous vos besoins en matière d’électricité, y compris l’installation, la réparation et l’entretien de systèmes électriques.
             </div>
         </div>
     </section>
