--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>univers multi-services</title>
     <link rel="stylesheet" href="view/css/style.css">
     <link rel="stylesheet" href="view/css/nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="view/img/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -17,9 +18,12 @@
             <div class="main_list" id="mainListDiv">
                 <ul>
                     <li><a href="#branche">Acceuil</a></li>
-                    <li><a href="#home">A propos</a></li>
                     <li><a href="#containeur1">Service</a></li>
                     <li><a href="#pied">Contact</a></li>
+                </ul>
+                <ul class="header-social">   
+                    <li><a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fab fa-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="media_button">
