--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
                     <li><a href="#branche">Acceuil</a></li>
                     <li><a href="#containeur1">Service</a></li>
                     <li><a href="#pied">Contact</a></li>
-                </ul>
-                <ul class="header-social">   
-                    <li><a href=""><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href=""><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://instagram.com/univers.multiservices?igshid=MzNlNGNkZWQ4Mg== "><i class="fa fa-instagram" style="font-size:28px"></i></i></a></li>
                 </ul>
             </div>
             <div class="media_button">
@@ -37,9 +34,9 @@
     </nav>
 
     <div id="branche">
-       <a href=""><img src="view/img/sos.jpeg" class="items" alt=""></a> 
-        <a href=""><img src="view/img/touch.jpeg" class="items" alt=""></a>
-        <a href=""><img src="view/img/cam3.jpeg" class="items" alt=""></a>
+       <a href=""><img src="view/img/cons.png" class="items" alt=""></a> 
+        <a href=""><img src="view/img/logo-tECH.png" class="items" alt=""></a>
+        <a href=""><img src="view/img/u-elec.png" class="items" alt=""></a>
     </div>
             
     <section id="home">
@@ -70,11 +67,17 @@
     </section>
     <footer id="pied">
         <div class="foot">
-            Chez Univers Multi-Services, nous nous efforçons de dépasser les attentes de nos clients en leur offrant des solutions personnalisées et adaptées à leurs besoins spécifiques. <br>Nous sommes spécialisés dans les domaines de la maintenance, du nettoyage, de la sécurité, de l’informatique et bien plus encore
+            Chez Univers Multi-Services, nous nous efforçons de dépasser les attentes de nos clients en leur offrant des solutions personnalisées et adaptées à leurs besoins spécifiques. 
         </div>
         <div class="foot">
-
+            <p>
+                Nous contacter
+            </p>
+            Cliquez<a href="mailto:universmultiservices00@gmail.com"> ici </a>pour nous laissez un mail <br>
+            <a href="https://instagram.com/univers.multiservices?igshid=MzNlNGNkZWQ4Mg=="><i class="fa fa-instagram" style="font-size:50px"></i></i></a>
+            <a href="https://wa.me/message/PMEZ232IOJERG1"><i class="fa fa-whatsapp" style="font-size:50px"></i></i></a>
         </div>
+        <span class="copyright">©Copyright UMServices 2023</span> 
     </footer>
     <script type="module" src="view/js/script.js"></script>
 </body>
