--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="view/css/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="view/img/logo.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="view/js/scroll.js"></script>
 </head>
 <body>
     <nav class="nav">
@@ -64,6 +66,7 @@
                 U-Elec est un departement expert dans le domaine des installations électriques pour les particuliers et les entreprises.<br>Nous proposons des services de qualité pour répondre à tous vos besoins en matière d’électricité, y compris l’installation, la réparation et l’entretien de systèmes électriques.
             </div>
         </div>
+
     </section>
     <footer id="pied">
         <div class="foot">
