--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>univers multi-services</title>
     <link rel="stylesheet" href="view/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="view/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="view/img/um-logo.jpg" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="view/js/scroll.js"></script>
 </head>
