--- a/U-Cons/u-cons.html
+++ b/U-Cons/u-cons.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>U-Cons</title> 
+    <link rel="shortcut icon" href="../view/img/um-logo.jpg" type="image/x-icon">
 </head>
 
 <body>
