--- a/U_ELEC/ulec.html
+++ b/U_ELEC/ulec.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ulect</title>
     <script src="script.js" defer></script>
+    <link rel="shortcut icon" href="../view/img/um-logo.jpg" type="image/x-icon">
 </head>
 <body>
     <script>
