--- a/u-tech/u-tech.html
+++ b/u-tech/u-tech.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Accueil</title>
+    <link rel="shortcut icon" href="../view/img/um-logo.jpg" type="image/x-icon">
 </head>
 <body>
     <script>
